Minify docker image size (#2)
* Minify docker